fix: status and action bar on ios

--- a/app/app.ios.scss
+++ b/app/app.ios.scss
@@ -1,2 +1,11 @@
 @import 'app-common';
 @import '~nativescript-theme-core/scss/platforms/index.ios';
+
+
+Page {
+    background-color: #FAFAFA;
+}
+
+ActionBar {
+    color: black;
+}
