--- a/app/pages/lands/details/details.component.scss
+++ b/app/pages/lands/details/details.component.scss
@@ -1,6 +1,9 @@
 .details {
 
 }
+ActionBar {
+    color: white;
+}
 .main-layout {
     margin-top: -80;
     background-color: #fafafa;
